feat: Update workshop configuration to use simple comma-separated chapters format and auto-generate required fields

--- a/workshops/redis-fundamentals/workshop.config.json
+++ b/workshops/redis-fundamentals/workshop.config.json
@@ -21,7 +21,7 @@
     {
       "order": 2,
       "chapterRef": "workshops/redis-fundamentals/chapters/building-the-chat-interface",
-      "required": false,
+      "required": true,
       "type": "workshop-specific"
     }
   ],
