Fix Workshop Builder GUI: search and module display
- Fix workshop search to work with filesystem mode
  * Updated filterWorkshops() to load from API when useFilesystem is true
  * Made function async to handle filesystem API calls
  * Search now works for both localStorage and filesystem workshops

- Fix clicking workshop to populate ID field
  * Updated onclick handlers in both renderWorkshopBrowser() and filterWorkshops()
  * Now populates workshop-id input field when clicking a workshop
  * Automatically closes browser modal after selection

- Fix module display after loading from filesystem
  * Transform string-based modules from API into proper module objects
  * Added defensive handling in renderModules() for both string and object formats
  * Fixed updateSummary() to handle mixed module formats safely
  * Fixed renderNavigation() to display modules correctly regardless of format

These fixes ensure workshops loaded from filesystem display properly with
all modules, navigation, and summary statistics visible.

--- a/shared/tools/workshop-builder-server/Dockerfile
+++ b/shared/tools/workshop-builder-server/Dockerfile
@@ -8,11 +8,10 @@ WORKDIR /app
 COPY package*.json ./
 
 # Install dependencies
-RUN npm ci --only=production
+RUN npm install --production
 
 # Copy application files
 COPY *.js ./
-COPY *.md ./
 
 # Expose port
 EXPOSE 3000
