feat: Add Workshop Builder architecture documentation
- Created WORKSHOP_BUILDER_ARCHITECTURE.md to outline the architecture and functionality of the Workshop Builder application.
- Documented the complete stack, including GUI, Express REST API, and file operations.
- Explained module creation, navigation generation, workshop operations, and Git/GitHub integration.
- Clarified what the Workshop Builder does and does not use, emphasizing its self-contained nature.

chore: Clean up old workshop directories and structure

- Removed outdated directories and files from deploy-redis-for-developers-amr workshop.
- Established a new, clean structure with auto-generated modules and navigation.
- Provided recommendations for using shared modules and maintaining a clean workshop structure.

feat: Introduce module template with comprehensive chapter structure

- Added module-template with .chapter-metadata.json, README.md, answers.md, and scripts for setup, demo, and cleanup.
- Included detailed sections for learning objectives, prerequisites, chapter content, and troubleshooting.

fix: Implement GitHub operations module for API interactions

- Created github-ops.js to handle GitHub API operations, including creating pull requests and checking repository status.
- Integrated Octokit for seamless interaction with GitHub.

test: Add API testing HTML page for Workshop Builder

- Developed test-api.html to facilitate testing of Workshop Builder API endpoints.
- Included functions to check server health, list workshops, and load specific workshop data.

--- a/shared/tools/workshop-builder-server/package.json
+++ b/shared/tools/workshop-builder-server/package.json
@@ -15,7 +15,8 @@
     "cors": "^2.8.5",
     "simple-git": "^3.20.0",
     "js-yaml": "^4.1.0",
-    "body-parser": "^1.20.2"
+    "body-parser": "^1.20.2",
+    "@octokit/rest": "^20.0.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
