feat: Add dynamic Jupyter notebook testing framework with Docker integration
- Implemented `test-notebooks` script for testing Jupyter notebooks in various scopes (current, module, all).
- Added Docker setup for PostgreSQL and Redis to simulate realistic testing environments.
- Created advanced testing suite with cell-level validation and output checking.
- Introduced lightweight notebook test runner as an alternative to pytest.
- Developed comprehensive README documentation for testing framework and usage instructions.
- Included requirements for testing dependencies and setup scripts.
- Added multiple test patterns for dynamic discovery and execution of notebooks.
- Ensured all notebooks are validated for execution errors, content, and metadata.

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,8 @@ __pycache__/
 venv/
 env/
 ENV/
+.venv/
+**/.venv/
 *.egg-info/
 .pytest_cache/
 
@@ -80,3 +82,7 @@ _site/
 scratch/
 notes.txt
 TODO.md
+
+# Local development (macOS setup)
+.activate-local
+*.local
