feat: enhance Jupyter notebooks with custom styling and auto-kernel selection
- Add custom CSS for better visual styling

- Configure Python 3 kernel automatically

- No kernel selection needed in Codespaces

- Color-coded cells and execution indicators

- Updated all 8 notebooks with proper metadata

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -27,7 +27,13 @@
       "settings": {
         "terminal.integrated.defaultProfile.linux": "bash",
         "jupyter.askForKernelRestart": false,
-        "jupyter.widgetScriptSources": ["jsdelivr.com", "unpkg.com"]
+        "jupyter.widgetScriptSources": ["jsdelivr.com", "unpkg.com"],
+        "notebook.lineNumbers": "on",
+        "notebook.cellFocusIndicator": "border",
+        "notebook.compactView": false,
+        "notebook.showCellStatusBar": "visible",
+        "notebook.output.textLineLimit": 100,
+        "python.defaultInterpreterPath": "/usr/local/bin/python"
       }
     }
   },
