--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,9 @@ workspace/
 Thumbs.db
 
 # Editor files
-.vscode/
+.vscode/*
+!.vscode/settings.json
+!.vscode/notebook-custom.css
 .idea/
 *.swp
 *.swo
