Add custom styling for Redis workshops and update notebook metadata
- Introduced a new CSS file for consistent styling across Jupyter notebooks in Redis workshops.
- Added a helper Python function to load the custom CSS styling automatically.
- Updated notebook metadata to reflect the new Python version and improved display name.
- Included a fallback mechanism for styling in case the CSS file is not found.
- Enhanced the user experience with a success message upon loading the styling.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,12 +11,6 @@
   
   // Jupyter Notebook Configuration
   "jupyter.notebookFileRoot": "${workspaceFolder}",
-  "jupyter.kernels.filter": [
-    {
-      "path": "${workspaceFolder}/.venv/bin/python",
-      "type": "pythonEnvironment"
-    }
-  ],
   "notebook.output.textLineLimit": 100,
   "notebook.cellToolbarLocation": {
     "default": "right"
@@ -31,5 +25,8 @@
   "notebook.lineNumbers": "on",
   "notebook.cellFocusIndicator": "border",
   "notebook.compactView": false,
-  "notebook.showCellStatusBar": "visible"
+  "notebook.showCellStatusBar": "visible",
+  "jupyter.kernels.excludePythonEnvironments": [
+    "${workspaceFolder}/.venv/bin/python"
+  ]
 }
