--- a/workshops/test-complex-tree/test-alpha-greatgrand-1/module.yaml
+++ b/workshops/test-complex-tree/test-alpha-greatgrand-1/module.yaml
@@ -1,7 +1,3 @@
-id: test-alpha-greatgrand-1
-title: "test-alpha-greatgrand-1 (Level 3)"
-description: "Test module at level 3 in hierarchy"
-duration: 15
 inheritance:
-  parentPath: "workshops/test-complex-tree/test-alpha-grandchild-1"
-  inheritedAt: "2025-11-17T08:04:38Z"
+  parentPath: workshops/test-complex-tree/test-alpha-grandchild-1
+  inheritedAt: '2025-11-17T08:04:38Z'
