--- a/workshops/deploy-redis-for-developers-amr-4h/module-02-azure-managed-redis-architecture/module.yaml
+++ b/workshops/deploy-redis-for-developers-amr-4h/module-02-azure-managed-redis-architecture/module.yaml
@@ -1,10 +1,3 @@
-id: module-02-azure-managed-redis-architecture
-title: Azure Managed Redis Architecture
-description: >-
-  Understand Azure Managed Redis offerings, SKU selection, architecture
-  patterns, and security fundamentals.
-duration: 60
 inheritance:
-  parentPath: >-
-    workshops/deploy-redis-for-developers-amr/module-02-azure-managed-redis-architecture
-  inheritedAt: '2025-11-20T21:08:18.235Z'
+  parentPath: workshops/deploy-redis-for-developers-amr/module-02-azure-managed-redis-architecture
+  inheritedAt: '2025-11-20T22:04:29.955Z'
