--- a/workshops/test-complex-tree/test-alpha-child-2/module.yaml
+++ b/workshops/test-complex-tree/test-alpha-child-2/module.yaml
@@ -1,7 +1,3 @@
-id: test-alpha-child-2
-title: "test-alpha-child-2 (Level 1)"
-description: "Test module at level 1 in hierarchy"
-duration: 15
 inheritance:
-  parentPath: "workshops/test-complex-tree/test-root-alpha"
-  inheritedAt: "2025-11-17T08:04:37Z"
+  parentPath: workshops/test-complex-tree/test-root-alpha
+  inheritedAt: '2025-11-17T08:04:37Z'
