--- a/workshops/deploy-redis-for-developers-amr-4h/module-03-performance-efficiency--data-modeling/module.yaml
+++ b/workshops/deploy-redis-for-developers-amr-4h/module-03-performance-efficiency--data-modeling/module.yaml
@@ -1,5 +1,7 @@
 inheritance:
-  parentPath: workshops/deploy-redis-for-developers-amr/module-06-performance-efficiency--data-modeling
-  inheritedAt: '2025-11-20T22:04:29.960Z'
+  parentPath: >-
+    workshops/deploy-redis-for-developers-amr/module-06-performance-efficiency--data-modeling
+  inheritedAt: '2025-11-21T14:21:46.228Z'
   customized: true
-  customizationReason: 'Duration adjusted for 4h workshop format (50 min vs 60 min)'
+  customizationReason: Metadata customized when copied
+  customizedAt: '2025-11-21T14:21:46.228Z'
