Add troubleshooting and migration lab for Redis with diagnostics, performance testing, and data migration techniques

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -22,7 +22,8 @@
         "ms-toolsai.jupyter-keymap",
         "ms-toolsai.jupyter-renderers",
         "redhat.vscode-yaml",
-        "davidanson.vscode-markdownlint"
+        "davidanson.vscode-markdownlint",
+        "stateful.runme"
       ],
       "settings": {
         "terminal.integrated.defaultProfile.linux": "bash",
